# imgcat

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  Makefile.in  README.md  Sconstruct  config.mk.in  configure  configure.ac  cstandard.mk  imgcat.c  rgbtree.c  rgbtree.h
.github/workflows/: build-and-test.yml  compile-manpage.yml  upload-release.yml
doc/: Makefile  SConscript  imgcat.1  imgcat.1.md
docs/: Makefile  imgcat.1  imgcat.1.md
etc/: gen_img.py  gen_table.py  xterm-256color.yaml
libexec/: color_db.py
src/: .gitignore  Makefile  SConscript  cimg_config.h.in  config.h.in  imgcat.c  load_image.cc  load_image.h  print_image.c  print_image.h  rgbtree.c  rgbtree.h  stb_image_resize.c  tree_256_color.h
test/: 1px_8_table.out  any
tests/: 1px_256_iterm2.out  1px_256_iterm2_80xN.out  run  test-cases.sh
